@@ -1,4 +1,4 @@
-# $Id: Makefile.PL,v 0.4.1.4 1997/02/27 15:31:04 ram Exp $
+# $Id: Makefile.PL,v 0.4.1.5 1997/05/16 08:43:43 ram Exp $
 #
 #  Copyright (c) 1995-1997, Raphael Manfredi
 #  
@@ -6,6 +6,9 @@
 #  as specified in the README file that comes with the distribution.
 #
 # $Log: Makefile.PL,v $
+# Revision 0.4.1.5  1997/05/16  08:43:43  ram
+# patch6: updated version number
+#
 # Revision 0.4.1.4  1997/02/27  15:31:04  ram
 # patch4: updated version number
 #
@@ -25,7 +28,7 @@
 use ExtUtils::MakeMaker;
 use Config;
 
-$Version = '0.4_04';
+$Version = '0.4_06';
 
 WriteMakefile(
     'NAME'     => 'Storable',
