@@ -1,4 +1,4 @@
-;# $Id: Storable.pm,v 0.4.1.3 1997/02/27 15:31:22 ram Exp $
+;# $Id: Storable.pm,v 0.4.1.4 1997/05/16 08:44:54 ram Exp $
 ;#
 ;#  Copyright (c) 1995-1997, Raphael Manfredi
 ;#  
@@ -6,6 +6,10 @@
 ;#  as specified in the README file that comes with the distribution.
 ;#
 ;# $Log: Storable.pm,v $
+;# Revision 0.4.1.4  1997/05/16  08:44:54  ram
+;# patch6: forgot that AutoLoader does not export its own AUTOLOAD
+;# patch6: updated version number
+;#
 ;# Revision 0.4.1.3  1997/02/27  15:31:22  ram
 ;# patch4: updated version number
 ;# patch4: declare VERSION as being used
@@ -31,7 +35,8 @@ use AutoLoader;
 use Carp;
 use vars qw($forgive_me $VERSION);
 
-$VERSION = '0.4_04';
+$VERSION = '0.4_06';
+*AUTOLOAD = \&AutoLoader::AUTOLOAD;		# Grrr...
 
 bootstrap Storable;
 1;
